<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_activity_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_place_white"/>

        <TextView
            android:id="@+id/text_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_city_name_size"
            android:textStyle="bold"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linear_current_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_temp_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_temp_current_size"/>

            <TextView
                android:id="@+id/text_temp_current_unit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="top"
                android:text="@string/text_temp_unit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_city_name_size"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/image_icon_weather_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/text_summary_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_summary_current_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/image_margin_top"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_real_feel"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_summary_current_size"/>

            <TextView
                android:id="@+id/text_temp_real_feel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_summary_current_size"/>

            <TextView
                android:id="@+id/text_unit_real_feel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_temp_unit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_unit"
                android:textStyle="bold"/>
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:stretchColumns="*">

            <TableRow>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_umbrella"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_temperature"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_wind"/>
            </TableRow>

            <TableRow>

                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_humidity_current"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_summary_current_size"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_humidity_unit"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_unit"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_temp_max_current"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_summary_current_size"/>

                    <TextView
                        android:id="@+id/text_unit_temp_max"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/text_temp_unit"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_unit"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/text_temp_max_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_temp_max_min"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_summary_current_size"/>

                    <TextView
                        android:id="@+id/text_temp_min_current"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_summary_current_size"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/text_temp_unit"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_unit"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_wind_current"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_summary_current_size"/>

                    <TextView
                        android:id="@+id/text_wind_current_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_wind_unit"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_unit"/>
                </LinearLayout>

            </TableRow>
        </TableLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_weather_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"/>

    <TextView
        android:id="@+id/text_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/activity_padding_bottom"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_summary_current_size"/>
</LinearLayout>